test/libsolidity/syntaxTests/storageLayoutSpecifier/delete.sol
contract C layout at delete 2 { }
// ----
// TypeError 4247: (28-29): Expression has to be an lvalue.
// TypeError 9767: (21-29): Built-in unary operator delete cannot be applied to type int_const 2.
